<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_horizontal"
        android:padding="@dimen/fab_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/titol" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTitol"
            android:gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/botonbuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/buscar" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/netejar"
        android:id="@+id/botonnetejar"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/tornar"
        android:id="@+id/botontornar"/>


</LinearLayout>